# QWar

./: CMakeLists.txt  Card.cpp  Card.h  Card.qml  Deck.h  Game.cpp  Game.h  GamePlay.qml  GameStart.qml  Player.cpp  Player.h  PlayerArea.qml  PlayerSelector.qml  Players.qml  QGame.cpp  QGame.h  QGameController.cpp  QGameController.h  QGameModel.cpp  QGameModel.h  QPlayer.cpp  QPlayer.h  QWarApplication.cpp  QWarApplication.h  README.md  RootWindow.qml  Round.cpp  Round.h  conanfile.py  dependencies.cmake  main.cpp  model.qm  qwar-classes.txt  resources.qrc
azmq-test/: CMakeLists.txt  TestPublisher.cpp  nasdaq.cpp
client/: CMakeLists.txt  ClientAdapter.cpp  ClientAdapter.h  QWarClientApp.cpp  QWarClientApp.h  ServerCtrlSocket.cpp  ServerCtrlSocket.h  ServerCtrlSocketAdapter.cpp  ServerCtrlSocketAdapter.h  ServerPlaySocket.cpp  ServerPlaySocket.h  StatePushSocket.cpp  StatePushSocket.h  main.cpp
client/qml/: Intro.qml  RootWindow.qml  ServerConnect.qml  ServerCreate.qml
cmake/: deployapp.cmake.in
documentation/PlantUML/: client-classes.txt  game-startup.txt  mvc-sequence1.txt  version1-gameplay.txt
documentation/QM/: .model  model.qm
gameplay/: CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  EventScheduler.cpp  EventScheduler.h  EventSchedulerDefs.h  Game.cpp  Game.h  Player.cpp  Player.h  PlayerEvents.h  PlayerState.cpp  PlayerState.h  Round.cpp  Round.h  RoundState.cpp  RoundState.h  TimerService.cpp  TimerService.h  gameplay-classes.txt
gameplay/test/: CMakeLists.txt  PlayFullGame.cpp  TestPlayer.cpp  TestPlayer.h
msgpack-test/: CMakeLists.txt  MsgpackTest.cpp
networking/: CMakeLists.txt  ClientInterface.h  Connection.h  TSQueue.h
server/: CMakeLists.txt  GameplayCommunicator.cpp  GameplayCommunicator.h  Server.cpp  Server.h  StatePublisher.cpp  StatePublisher.h  StateReceiver.cpp  StateReceiver.h
test/: CMakeLists.txt
test/azmq-test/: TestSubscriber.cpp  nasdaq.cpp
test/msgpack-test/: MsgpackTest.cpp
